--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </header>
     <nav class="mobile-nav">
         <ul class="mobile-nav__items">
-            <li class="mobile-nav__item"><a href="index.html">About</a></li>
+            <li class="mobile-nav__item"><a href="index.html">About Us</a></li>
             <li class="mobile-nav__item"><a href="index.html">Careers</a></li>
-            <li class="mobile-nav__item"><a href="index.html">Contact</a></li>
+            <li class="mobile-nav__item"><a href="index.html">Contact Us</a></li>
         </ul>
     </nav>
     <main>
